--- a/src/app/especialidad/modales/modal-especialidad/modal-especialidad.component.html
+++ b/src/app/especialidad/modales/modal-especialidad/modal-especialidad.component.html
@@ -5,7 +5,7 @@
             <div class="col-12">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Nombre</mat-label>
-                    <input formControlName="nombreEspecialidad" matInput autocomplete="off" />
+                    <input formControlName="nombreEspecialidad" matInput autocomplete="off" maxlength="60" />
                 </mat-form-field>
             </div>
         </div>
@@ -14,7 +14,7 @@
             <div class="col-12">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Descipción</mat-label>
-                    <textarea formControlName="descripcion" matInput autocomplete="off" rows="2"></textarea>
+                    <textarea formControlName="descripcion" matInput autocomplete="off" rows="2" maxlength="100"></textarea>
                 </mat-form-field>
             </div>
         </div>
