--- a/src/app/especialidad/pages/listado-especialidad/listado-especialidad.component.html
+++ b/src/app/especialidad/pages/listado-especialidad/listado-especialidad.component.html
@@ -8,6 +8,12 @@
         </mat-card-title>
         <mat-divider></mat-divider>
         <mat-card-content class="mt-2">
+
+            <mat-form-field style="width: 100%;">
+                <mat-label>Buscar</mat-label>
+                <input matInput (keyup)="aplicarFiltroListado($event)" placeholder="Filtro" #input>
+            </mat-form-field>
+
             <div class="mat-elevation-z8" style="overflow-x: auto;">
                 <table mat-table [dataSource]="dataSource">
 
@@ -29,11 +35,23 @@
 
                     <ng-container matColumnDef="acciones">
                         <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                        <td mat-cell *matCellDef="let element"></td>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-icon-button color="primary" (click)="editarEspecialidad(element)">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn" (click)="removerEspecialidad(element)">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+                    </tr>
+
                 </table>
 
                 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
